[package]
name = "robots-parser"
version = "0.1.0"
authors = ["Lukas Abfalterer <labfalterer@gmail.com>"]
edition = "2018"
description = "A robots.txt file parser for rust"
license = "MIT/Apache-2.0"


[dependencies]
nom = "5.0.0"
url = "1.7.2"
reqwest = { version = "0.9.18", optional=true }

[features]
default = ["web"]
web = ["reqwest"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
